# OxiQMS

./: .gitignore  Cargo.toml  DEVELOPMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  TUI_FRAMEWORK_IMPLEMENTATION.md  UNIFIED_INTERFACE_CONSOLIDATION.md  UNIFIED_INTERFACE_IMPLEMENTATION.md  clippy.toml  risk_management_plan.md  test_schema.json
.config/: nextest.toml
687e8a93-0000-4010-acf4-0000687e8aa3/: project.json
687e8a93-0000-4010-acf4-0000687e8aa3/backups/: backup_index.json
687e8a93-0000-4010-acf4-0000687e8aa3/documents/: index.json
687e8a93-0000-4010-acf4-0000687e8aa3/risks/: 16658ba1-a8af-004b-ae2a-103d00e90493.json  f12e32e5-159f-431d-702b-84eaaeef0606.json  index.json
687e8a93-0000-4010-acf4-0000687e8aa3/trace/: coverage.json  requirements.json
687e8fd0-0000-4010-1cf0-0000687e8fe0/: project.json
687e9264-0000-4010-c35c-0000687e9274/: project.json
687e9264-0000-4010-c35c-0000687e9274/config/: config.json
assets/js/: qms-app.js
ci/: build.bat  build.sh
docs/: setup_workflow.md
documents/: index.json
documents/7615d07e-1241-22a2-6dba-00118d4147de/: metadata.json
documents/7b827ebe-f732-1f1a-5122-00118d4143d6/: metadata.json
examples/: tui_auth_simple_demo.rs  tui_authentication_demo.rs
src/: audit.rs  config.rs  constants.rs  error.rs  fs_utils.rs  integration.rs  json_utils.rs  lib.rs  lock.rs  main.rs  main_unified.rs  prelude.rs  test_minimal.rs  utils.rs  validation.rs
src/commands/: audit.rs  cli_auth_helper.rs  command_execution_context.rs  command_handler_trait.rs  doc.rs  init.rs  mod.rs  report.rs  req.rs  risk.rs  risk_approval_handlers.rs  risk_register.rs  solid_command_demo.rs  solid_validation_test.rs  test.rs  trace.rs  unified_doc_handler.rs  user.rs
src/interfaces/: authentication.rs  integration_tests.rs  mod.rs  project_strategies.rs  routing.rs  state.rs  unified_auth_flow.rs  unified_config_manager.rs  unified_context.rs  unified_integration_example.rs  unified_project_manager.rs  unified_routing.rs  (+2 more)
templates/: generic_template.md  rmf_template.md  sdd_template.md  srs_template.md  templates.json  test_protocol_template.md  user_requirements_template.md
tests/: compliance_validation.bat  e2e_test.bat  e2e_test.sh  lib.rs  manual_qa_checklist.md  report_integration_test.rs  test_risk_approval.rs  validation_test.bat  verification_integration_test.rs  wasm_client_integration_test.rs  web_server_integration.rs
trace/: links.json
(+256 files in other folders)
