[package]
name = "qms"
version = "1.0.0"
edition = "2021"
authors = ["QMS Team"]
description = "Medical Device Quality Management System - FDA 21 CFR Part 820, ISO 13485, ISO 14971 Compliant"
rust-version = "1.70"
keywords = ["medical", "quality", "fda", "iso"]
license = "MIT"
homepage = "https://github.com/qms-team/qms"
repository = "https://github.com/qms-team/qms"
readme = "README.md"

[dependencies]
rust-argon2 = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
sha2 = "0.9"

[dev-dependencies]

# Test configuration prioritizing Playwright E2E tests over backend database tests
[[test]]
name = "unit_tests"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"

# Custom test profiles
[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# E2E test configuration
[package.metadata.playwright]
test-dir = "tests/e2e"
config-file = "tests/e2e/playwright.config.ts"
browsers = ["chromium", "firefox", "webkit"]
mobile = ["Mobile Chrome", "Mobile Safari"]
